test-cases/final-dump/call_unknown.exp
Error detected during type checking of module(s) call_unknown
[91m!ROOT!/final-dump/call_unknown.wybe:1:26: 'nonexistent_proc' unknown in 'foo'
[0m
